chore(): change name module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "download-all",
+  "name": "download-all-u-want",
   "version": "1.0.0",
   "description": "Download whatever you want!!",
   "main": "index.js",
